<resources>
    <string name="app_name">LifeStats</string>
    <string name="setup">SETUP</string>
    <string name="titleActivitySetupSentiment">SetupActivitySentiment</string>
    <string name="health">To get in better shape</string>
    <string name="stress">To reduce my stress levels</string>
    <string name="grades">To improve my grades</string>
    <string name="other">Other:</string>
    <string name="nextPage">Continue</string>
    <string name="sentimentPrompt">Would you like to submit a diary entry for each day? We\'ll
        analyze your diary entries to help you figure out what\'s stressing you out and how you
        can fix it!</string>
    <string name="title_activity_login">Sign in</string>
</resources>
