<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_setup_reasons"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.upenn.cis350.lifestats.SetupActivityReasons">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:weightSum="1">

        <TextView
            android:text="Why are you using this app?"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/userPromptReasons" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="24dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.11" />

        <CheckBox
            android:text="@string/health"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/health" />

        <CheckBox
            android:text="@string/stress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/stress" />

        <CheckBox
            android:text="@string/grades"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/grades" />

        <CheckBox
            android:text="@string/other"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/other" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="96dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.40" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button3"
                android:layout_weight="1"
                android:text="@string/nextPage" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

    </LinearLayout>


</RelativeLayout>
